fix: fix desktop horizontal scroll

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,10 +1,10 @@
 .page {
     position: relative;
     max-width: 882px;
-    width: 100%;
     margin: 0 auto;
     background-color: #000;
-    padding: 45px 199px 60px;
+    padding-top: 45px;
+    padding-bottom: 60px;
     font-family: 'Inter', 'Arial', sans-serif;
 }
 
